Criando a autorização e autenticação do cliente, ja com as controlers, services e repositorys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.profiles.active=test
+spring.jpa.open-in-view=true
+
+default.sender=felipesoares_1993@hotmail.com
+default.recipient=felipesoares_1993@hotmail.com
+
+
+jwt.secret=SequenciaDeCaracteresParaAssinharToken
+jwt.expiration=86400000
 
