--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <version>6.0.18.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
